--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -7,6 +7,18 @@
   padding:0;
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
+
+  &::-webkit-scrollbar {
+    width: 5px;               /* ширина scrollbar */
+  }
+  &::-webkit-scrollbar-track {
+    background: $c_dark800;        /* цвет дорожки */
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: blue;    /* цвет плашки */
+    border-radius: 20px;       /* закругления плашки */
+    border: 3px solid $cf_dark900;  /* padding вокруг плашки */
+  }
 }
 
 #root {
